--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Planet Capsule – Pole Fix Camera with Pitch</title>
+<title>Planet Capsule – Stable Orientation</title>
 <style>
   body { margin: 0; overflow: hidden; background: black; }
   canvas { display: block; }
@@ -21,7 +21,7 @@
 <body>
 <div id="hud">
   WASD – движение<br>
-  Мышь – поворот носа капсулы (влево-вправо) + камера вверх/вниз<br>
+  Мышь – поворот носа (влево-вправо) + камера вверх/вниз<br>
   Space – нижнее сопло (прыжок)
 </div>
 
@@ -133,14 +133,20 @@ window.addEventListener('keyup', e => keys[e.key.toLowerCase()] = false);
 
 document.body.addEventListener('click', () => document.body.requestPointerLock());
 
-// yaw и pitch мышью
-let yaw = 0;
+// === YAW/PITCH ===
 let pitch = 0;
+const yawQuatOffset = new THREE.Quaternion();
+
 document.addEventListener('mousemove', (e) => {
   if (document.pointerLockElement === document.body) {
-    yaw -= e.movementX * 0.002;
+    // вращаем капсулу вокруг её локальной оси upVec
+    const deltaYaw = e.movementX * -0.002;
+    const deltaQuat = new THREE.Quaternion().setFromAxisAngle(new THREE.Vector3(0,1,0), deltaYaw);
+    yawQuatOffset.multiplyQuaternions(deltaQuat, yawQuatOffset);
+
+    // pitch только для камеры
     pitch -= e.movementY * 0.002;
-    pitch = Math.max(-Math.PI/3, Math.min(Math.PI/3, pitch)); // ограничение угла обзора вверх/вниз
+    pitch = Math.max(-Math.PI/3, Math.min(Math.PI/3, pitch));
   }
 });
 
@@ -149,6 +155,7 @@ const clock = new THREE.Clock();
 const GRAVITY_FORCE = 200;
 const THRUST_FORCE = 50;
 const JUMP_FORCE = 100;
+const ATMOSPHERE_THICKNESS = BALL_RADIUS * 5;
 
 function getClosestPlanet() {
   const d1 = ballBody.position.distanceTo(planet1.body.position);
@@ -157,6 +164,7 @@ function getClosestPlanet() {
 }
 
 //// === АНИМАЦИЯ ===
+const targetQuat = new THREE.Quaternion();
 function animate() {
   requestAnimationFrame(animate);
   const dt = clock.getDelta();
@@ -174,46 +182,55 @@ function animate() {
     ballBody.applyForce(toPlanet, ballBody.position);
   });
 
-  // === ПОЗИЦИЯ КАПСУЛЫ ===
   capsuleMesh.position.copy(ballBody.position);
 
-  // === ОРИЕНТАЦИЯ КАПСУЛЫ ===
+  // === ВЫЧИСЛЯЕМ upVec (нижняя ось к ближайшей планете)
   const closestPlanet = getClosestPlanet();
   const upVec = new THREE.Vector3()
     .subVectors(capsuleMesh.position, closestPlanet.mesh.position)
     .normalize();
 
-  // базовый quaternion “низ к планете”
-  const baseQuat = new THREE.Quaternion().setFromUnitVectors(new THREE.Vector3(0, 1, 0), upVec);
+  // === BASE QUAT (низ к планете)
+  const baseQuat = new THREE.Quaternion().setFromUnitVectors(
+    new THREE.Vector3(0, 1, 0), upVec
+  );
 
-  // создаём локальную “ось yaw”
-  const yawQuat = new THREE.Quaternion().setFromAxisAngle(new THREE.Vector3(0,1,0), yaw);
+  // === Итоговая ориентация (baseQuat + накопленный yaw)
+  targetQuat.copy(baseQuat).multiply(yawQuatOffset);
 
-  // финальная ориентация капсулы
-  capsuleMesh.quaternion.copy(baseQuat).multiply(yawQuat);
+  // === Плавно поворачиваем капсулу
+  capsuleMesh.quaternion.slerp(targetQuat, 0.1);
 
   // === КАМЕРА ===
   const cameraDistance = 20;
   const cameraHeight = 5;
 
-  // берём вектор "сзади капсулы"
-  const backOffset = new THREE.Vector3(0, cameraHeight, cameraDistance);
+  let backOffset = new THREE.Vector3(0, cameraHeight, cameraDistance);
   backOffset.applyQuaternion(capsuleMesh.quaternion);
 
-  // добавляем вертикальный поворот (pitch) вокруг "правая ось капсулы"
+  // Pitch (вверх/вниз)
   const rightAxis = new THREE.Vector3(1,0,0).applyQuaternion(capsuleMesh.quaternion);
   const pitchQuat = new THREE.Quaternion().setFromAxisAngle(rightAxis, pitch);
   backOffset.applyQuaternion(pitchQuat);
 
   camera.position.copy(capsuleMesh.position).add(backOffset);
-
-  // up камеры = ось капсулы (чтобы низ сопла всегда низ)
-  const capsuleUp = new THREE.Vector3(0, 1, 0).applyQuaternion(capsuleMesh.quaternion);
-  camera.up.copy(capsuleUp);
-
+  camera.up.copy(upVec);
   camera.lookAt(capsuleMesh.position);
 
-  // === СОПЛА + ДВИЖЕНИЕ ===
+  // === ЭФФЕКТ АТМОСФЕРЫ ===
+  const d1 = capsuleMesh.position.distanceTo(planet1.mesh.position) - planet1.radius;
+  const d2 = capsuleMesh.position.distanceTo(planet2.mesh.position) - planet2.radius;
+  const minDist = Math.min(d1, d2);
+
+  if (minDist < ATMOSPHERE_THICKNESS) {
+    const t = Math.max(minDist / ATMOSPHERE_THICKNESS, 0);
+    const skyColor = new THREE.Color().lerpColors(new THREE.Color(0x87CEEB), new THREE.Color(0x000000), t);
+    scene.background = skyColor;
+  } else {
+    scene.background = new THREE.Color(0x000000);
+  }
+
+  // === ДВИЖЕНИЕ И СОПЛА ===
   const forward = new THREE.Vector3(0, 0, -1).applyQuaternion(capsuleMesh.quaternion);
   const right = new THREE.Vector3(1, 0, 0).applyQuaternion(capsuleMesh.quaternion);
 
@@ -246,6 +263,7 @@ function animate() {
 
 animate();
 
+//// === RESIZE ===
 window.addEventListener('resize', () => {
   camera.aspect = window.innerWidth/window.innerHeight;
   camera.updateProjectionMatrix();
