--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Planet Capsule – Super Smooth Planet Transition</title>
+<title>Planet Capsule – Stable Camera at Poles</title>
 <style>
   body { margin: 0; overflow: hidden; background: black; }
   canvas { display: block; }
@@ -138,12 +138,10 @@ const yawQuatOffset = new THREE.Quaternion();
 
 document.addEventListener('mousemove', (e) => {
   if (document.pointerLockElement === document.body) {
-    // вращаем капсулу вокруг её локальной оси upVec
     const deltaYaw = e.movementX * -0.002;
     const deltaQuat = new THREE.Quaternion().setFromAxisAngle(new THREE.Vector3(0,1,0), deltaYaw);
     yawQuatOffset.multiplyQuaternions(deltaQuat, yawQuatOffset);
 
-    // pitch только для камеры
     pitch -= e.movementY * 0.002;
     pitch = Math.max(-Math.PI/3, Math.min(Math.PI/3, pitch));
   }
@@ -156,8 +154,7 @@ const THRUST_FORCE = 50;
 const JUMP_FORCE = 100;
 const ATMOSPHERE_THICKNESS = BALL_RADIUS * 5;
 
-// этот коэффициент отвечает за СКОРОСТЬ адаптации “низа” к новой планете
-const UP_TRANSITION_SMOOTHNESS = 0.02; 
+const UP_TRANSITION_SMOOTHNESS = 0.02; // плавность адаптации “низа”
 
 //// === ХРАНИМ ТЕКУЩИЙ “НИЗ” АППАРАТА ===
 let currentUpVec = new THREE.Vector3(0, 1, 0);
@@ -198,15 +195,28 @@ function animate() {
   // === ПЛАВНО тянем currentUpVec к desiredUp
   currentUpVec.lerp(desiredUp, UP_TRANSITION_SMOOTHNESS).normalize();
 
-  // === BASE QUAT (низ к currentUpVec)
-  const baseQuat = new THREE.Quaternion().setFromUnitVectors(
-    new THREE.Vector3(0, 1, 0), currentUpVec
-  );
+  // === СТАБИЛИЗАЦИЯ ПРИ ПОЛЮСАХ ===
+  const up = currentUpVec.clone();
+
+  const worldForward = new THREE.Vector3(0, 0, -1);
+  const worldRight   = new THREE.Vector3(1, 0, 0);
+
+  let right = new THREE.Vector3().crossVectors(up, worldForward);
+  if (right.lengthSq() < 0.0001) {
+    right = new THREE.Vector3().crossVectors(up, worldRight);
+  }
+  right.normalize();
+
+  const forwardStabilized = new THREE.Vector3().crossVectors(right, up).normalize();
+
+  // === СОЗДАЕМ quaternion из этих трёх векторов
+  const m = new THREE.Matrix4();
+  m.makeBasis(right, up, forwardStabilized);
+  const baseQuat = new THREE.Quaternion().setFromRotationMatrix(m);
 
   // === Итоговая ориентация (baseQuat + yaw)
   targetQuat.copy(baseQuat).multiply(yawQuatOffset);
 
-  // === применяем целевую ориентацию (теперь сам slerp можно оставить быстрым – низ меняется плавно через currentUpVec)
   capsuleMesh.quaternion.slerp(targetQuat, 0.15);
 
   // === КАМЕРА ===
@@ -215,13 +225,12 @@ function animate() {
   let backOffset = new THREE.Vector3(0, cameraHeight, cameraDistance);
   backOffset.applyQuaternion(capsuleMesh.quaternion);
 
-  // Pitch (вверх/вниз)
   const rightAxis = new THREE.Vector3(1,0,0).applyQuaternion(capsuleMesh.quaternion);
   const pitchQuat = new THREE.Quaternion().setFromAxisAngle(rightAxis, pitch);
   backOffset.applyQuaternion(pitchQuat);
 
   camera.position.copy(capsuleMesh.position).add(backOffset);
-  camera.up.copy(currentUpVec);
+  camera.up.copy(up);
   camera.lookAt(capsuleMesh.position);
 
   // === ЭФФЕКТ АТМОСФЕРЫ ===
@@ -239,7 +248,7 @@ function animate() {
 
   // === ДВИЖЕНИЕ И СОПЛА ===
   const forward = new THREE.Vector3(0, 0, -1).applyQuaternion(capsuleMesh.quaternion);
-  const right = new THREE.Vector3(1, 0, 0).applyQuaternion(capsuleMesh.quaternion);
+  const rightVec = new THREE.Vector3(1, 0, 0).applyQuaternion(capsuleMesh.quaternion);
 
   Object.values(thrusters).forEach(t => t.flame.visible = false);
 
@@ -252,15 +261,15 @@ function animate() {
     thrusters.front.flame.visible = true;
   }
   if (keys['a']) {
-    ballBody.applyForce(new CANNON.Vec3(-right.x*THRUST_FORCE, -right.y*THRUST_FORCE, -right.z*THRUST_FORCE), ballBody.position);
+    ballBody.applyForce(new CANNON.Vec3(-rightVec.x*THRUST_FORCE, -rightVec.y*THRUST_FORCE, -rightVec.z*THRUST_FORCE), ballBody.position);
     thrusters.right.flame.visible = true;
   }
   if (keys['d']) {
-    ballBody.applyForce(new CANNON.Vec3(right.x*THRUST_FORCE, right.y*THRUST_FORCE, right.z*THRUST_FORCE), ballBody.position);
+    ballBody.applyForce(new CANNON.Vec3(rightVec.x*THRUST_FORCE, rightVec.y*THRUST_FORCE, rightVec.z*THRUST_FORCE), ballBody.position);
     thrusters.left.flame.visible = true;
   }
   if (keys[' ']) {
-    ballBody.applyImpulse(new CANNON.Vec3(currentUpVec.x*JUMP_FORCE, currentUpVec.y*JUMP_FORCE, currentUpVec.z*JUMP_FORCE), ballBody.position);
+    ballBody.applyImpulse(new CANNON.Vec3(up.x*JUMP_FORCE, up.y*JUMP_FORCE, up.z*JUMP_FORCE), ballBody.position);
     thrusters.bottom.flame.visible = true;
   }
 
